<resources>
    <string name="app_name">GroupApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_description">None</string>

    <!--    menus-->
    <string name="main_home">Home</string>
    <string name="main_about">About me</string>
    <string name="main_work">Work Experience</string>
    <string name="main_contact">Contact me</string>
    <string name="main_settings">Settings</string>
    <string name="main_help">Help</string>


<!--    home-->
    <string name="skills">Skill set</string>
    <string name="skillHint">Enter your new skill name</string>

    <!--    about-->
    <string name="about_education">Education</string>
    <string name="about_interest">Interest</string>
    <!--    work-->
    <string name="work_experience">Professional Experience</string>
    <string name="work_project">Projects</string>
</resources>