<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_home"
        android:icon="@drawable/home"
        android:title="@string/main_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_about"
        android:icon="@drawable/profile"
        android:title="@string/main_about"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_work"
        android:icon="@drawable/work"
        android:title="@string/main_work"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/main_contact"
        android:icon="@drawable/contact"
        android:title="@string/main_contact"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/main_more1"
        android:icon="@drawable/home"
        android:title="@string/main_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/main_more2"
        android:icon="@drawable/home"
        android:title="@string/main_help"
        app:showAsAction="ifRoom" />
</menu>