<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/main_about"
            style="@style/Titles"/>

        <TextView
            android:id="@+id/aboutMeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="About me"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_education"
            style="@style/Titles"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/edusView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <TextView
            style="@style/Titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_interest" />

        <TextView
            android:id="@+id/interestText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="Interest"
            android:textColor="@color/colorGrey" />

    </LinearLayout>

</FrameLayout>